update pathway yaml

--- a/workflow/envs/pathway.yaml
+++ b/workflow/envs/pathway.yaml
@@ -3,6 +3,6 @@ channels:
   - bioconda
   - nodefaults
 dependencies:
-  - r-gsva
-  - r-msigdbr
+  - bioconductor-gsva
+  - bioconductor-msigdb
   - r-pheatmap
