--- a/.test/sra_test/config.yaml
+++ b/.test/sra_test/config.yaml
@@ -1,9 +1,9 @@
 # path or URL to sample sheet (TSV format, columns: sample, condition, ...)
-samples: .test/sra_test/samples.tsv
+samples: sra_test/samples.tsv
 # path or URL to sequencing unit sheet (TSV format, columns: sample, unit, fq1, fq2)
 # Units are technical replicates (e.g. lanes, or resequencing of the same biological
 # sample).
-units: .test/sra_test/units.tsv
+units: sra_test/units.tsv
 
 
 ref:
@@ -63,6 +63,9 @@ diffexp:
   # model: ~jointly_handled + treatment_1 + treatment_2
   model: ""
 
+pathway:
+# Generates the Hallmark pathway analysis and heatmap
+  activate: True
 
 params:
   cutadapt-pe: ""
